--- a/Del_Gallego.mw
+++ b/Del_Gallego.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur del gallego.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Del Gallego, Camarines Sur
 | 1990 = 17047		
@@ -13,7 +14,6 @@
 |}}
 Say '''Del Gallego''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 25,397 totoo. Walay kabaleg tan sukat to ya 208.31 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4411.	
 		
-
 ==Saray barangay==
 * Bagong Silang
 * Bucal
@@ -48,10 +48,14 @@ Say '''Del Gallego''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [
 * Tabion
 * Tomagoktok
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
