--- a/Gainza.mw
+++ b/Gainza.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur gainza.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gainza, Camarines Sur
 | 1990 = 7095		
@@ -24,10 +25,14 @@ Say '''Gainza''' et kumalima ya klase baley ed luyag na [[Camarines Sur]], [[Pil
 * District I (Poblacion)
 * District II (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}														
+{{Camarines Sur}}	
+													
 [[Category:Saray baley na Camarines Sur]]
