--- a/Garchitorena.mw
+++ b/Garchitorena.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur garchitorena.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Garchitorena, Camarines Sur
 | 1990 = 19439		
@@ -13,7 +14,6 @@
 |}}
 Say '''Garchitorena''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 27,010 totoo. Walay kabaleg tan sukat to ya 243.8 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4428.	
 		
-
 ==Saray barangay==
 * Ason (Anson)
 * Bahi
@@ -39,10 +39,14 @@ Say '''Garchitorena''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], 
 * Tamiawon
 * Toytoy
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
