--- a/Goa.mw
+++ b/Goa.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur goa.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Goa, Camarines Sur
 | 1990 = 39888		
@@ -13,7 +14,6 @@
 |}}
 Say '''Goa''' et kumadwa ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 63,308 totoo. Walay kabaleg tan sukat to ya 206.18 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4422.	
 		
-
 ==Saray barangay==
 * Abucayan
 * Bagumbayan Grande (Poblacion)
@@ -50,10 +50,14 @@ Say '''Goa''' et kumadwa ya klase baley ed luyag na [[Camarines Sur]], [[Pilipin
 * Tamban (Mabini)
 * Taytay (Halgon East)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
