--- a/Lagonoy.mw
+++ b/Lagonoy.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur lagonoy.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lagonoy, Camarines Sur
 | 1990 = 38163		
@@ -13,7 +14,6 @@
 |}}
 Say '''Lagonoy''' et kumadwa ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 55,465 totoo. Walay kabaleg tan sukat to ya 377.9 sq. km. Sikato et walad 4h ya distrito. Say zip code to et 4425.	
 		
-
 ==Saray barangay==
 * Agosais
 * Agpo-Camagong-Tabog
@@ -54,10 +54,14 @@ Say '''Lagonoy''' et kumadwa ya klase baley ed luyag na [[Camarines Sur]], [[Pil
 * Saripongpong (Poblacion)
 * Sipaco
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
