--- a/Libmanan.mw
+++ b/Libmanan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur libmanan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libmanan, Camarines Sur
 | 1990 = 77565		
@@ -13,7 +14,6 @@
 |}}
 Say '''Libmanan''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 108,716 totoo. Walay kabaleg tan sukat to ya 342.82 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4407.	
 		
-
 ==Saray barangay==
 * Aslong
 * Awayan
@@ -91,10 +91,14 @@ Say '''Libmanan''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pili
 * Villasocorro
 * Villadima (Santa Cruz)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
