--- a/Lupi.mw
+++ b/Lupi.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur lupi.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lupi, Camarines Sur
 | 1990 = 24809		
@@ -13,7 +14,6 @@
 |}}
 Say '''Lupi''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 32,167 totoo. Walay kabaleg tan sukat to ya 199.12 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4409.	
 			
-
 ==Saray barangay==
 * Alleomar
 * Bagangan Sr.
@@ -54,10 +54,14 @@ Say '''Lupi''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pilipi
 * Tible
 * Tapi (Lupi Nuevo)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}												
+{{Camarines Sur}}	
+											
 [[Category:Saray baley na Camarines Sur]]
