--- a/Magarao.mw
+++ b/Magarao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur magarao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magarao, Camarines Sur
 | 1990 = 16623		
@@ -13,7 +14,6 @@
 |}}
 Say '''Magarao''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 25,694 totoo. Walay kabaleg tan sukat to ya 44.97 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4403.	
 			
-
 ==Saray barangay==
 * Barobaybay
 * Bell (Poblacion)
@@ -31,10 +31,14 @@ Say '''Magarao''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pil
 * Santa Rosa
 * Santo Tomas (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}												
+{{Camarines Sur}}	
+											
 [[Category:Saray baley na Camarines Sur]]
