--- a/Milaor.mw
+++ b/Milaor.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur milaor.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Milaor, Camarines Sur
 | 1990 = 18199		
@@ -13,7 +14,6 @@
 |}}
 Say '''Milaor''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 31,150 totoo. Walay kabaleg tan sukat to ya 33.64 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4413.	
 		
-
 ==Saray barangay==
 * Alimbuyog
 * Amparado (Poblacion)
@@ -36,10 +36,14 @@ Say '''Milaor''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pili
 * Santo Domingo (Poblacion)
 * Tarusanan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
