--- a/Minalabac.mw
+++ b/Minalabac.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur minalabac.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Minalabac, Camarines Sur
 | 1990 = 35922		
@@ -13,7 +14,6 @@
 |}}
 Say '''Minalabac''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 52,390 totoo. Walay kabaleg tan sukat to ya 126.1 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4414.	
 	
-
 ==Saray barangay==
 * Antipolo
 * Bagolatao
@@ -41,10 +41,14 @@ Say '''Minalabac''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[P
 * Tariric
 * Timbang
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}														
+{{Camarines Sur}}	
+													
 [[Category:Saray baley na Camarines Sur]]
