--- a/Nabua.mw
+++ b/Nabua.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator camarines sur nabua.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Nabua, Camarines Sur
@@ -14,7 +14,6 @@
 |}}
 Say '''Nabua''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 83,874 totoo. Walay kabaleg tan sukat to ya 96.2 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 4434.	
 		
-
 ==Saray barangay==
 * Angustia (Angustia Inapatan)
 * Antipolo Old
@@ -59,10 +58,14 @@ Say '''Nabua''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pilipin
 * Topas Sogod
 * Paloyon Oriental
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
