--- a/Ocampo.mw
+++ b/Ocampo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur ocampo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ocampo, Camarines Sur
 | 1990 = 30876		
@@ -13,7 +14,6 @@
 |}}
 Say '''Ocampo''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 45,934 totoo. Walay kabaleg tan sukat to ya 118.33 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4419.	
 	
-
 ==Saray barangay==
 * Ayugan
 * Cabariwan
@@ -41,10 +41,14 @@ Say '''Ocampo''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pili
 * Santo Niño
 * Villaflorida
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}														
+{{Camarines Sur}}	
+													
 [[Category:Saray baley na Camarines Sur]]
