--- a/Pamplona,_Camarines_Sur.mw
+++ b/Pamplona,_Camarines_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur pamplona.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pamplona, Camarines Sur
 | 1990 = 24097		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pamplona''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 36,390 totoo. Walay kabaleg tan sukat to ya 80.6 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4416.	
 		
-
 ==Saray barangay==
 * Batang
 * Burabod
@@ -33,10 +33,14 @@ Say '''Pamplona''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pi
 * Tambo
 * Tampadong
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
