--- a/Presentacion.mw
+++ b/Presentacion.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur presentacion.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Presentacion, Camarines Sur
 | 1990 = 14788		
@@ -13,7 +14,6 @@
 |}}
 Say '''Presentacion''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 20,996 totoo. Walay kabaleg tan sukat to ya 143.8 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4424.	
 			
-
 ==Saray barangay==
 *Ayugao
 *Bagong Sirang
@@ -34,10 +34,14 @@ Say '''Presentacion''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], 
 *Sta. Maria
 *Tanauan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}												
+{{Camarines Sur}}	
+											
 [[Category:Saray baley na Camarines Sur]]
