--- a/Sagñay.mw
+++ b/Sagñay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur sagnay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sagñay, Camarines Sur
 | 1990 = 22422		
@@ -13,7 +14,6 @@
 |}}
 Say '''Sagñay''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 34,546 totoo. Walay kabaleg tan sukat to ya 154.76 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4421.	
 				
-
 ==Saray barangay==
 * Aniog
 * Atulayan
@@ -35,10 +35,14 @@ Say '''Sagñay''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pil
 * Tinorongan
 * Turague
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}											
+{{Camarines Sur}}	
+										
 [[Category:Saray baley na Camarines Sur]]
