--- a/San_Fernando,_Camarines_Sur.mw
+++ b/San_Fernando,_Camarines_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur san fernando.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Fernando, Camarines Sur
 | 1990 = 20608		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Fernando''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 35,258 totoo. Walay kabaleg tan sukat to ya 71.76 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4415.	
 			
-
 ==Saray barangay==
 * Alianza
 * Beberon
@@ -38,10 +38,14 @@ Say '''San Fernando''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], 
 * Santa Cruz
 * Tagpocol
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}												
+{{Camarines Sur}}	
+											
 [[Category:Saray baley na Camarines Sur]]
