--- a/San_Jose,_Camarines_Sur.mw
+++ b/San_Jose,_Camarines_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur san jose.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose, Camarines Sur
 | 1990 = 27517		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Jose''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 40,623 totoo. Walay kabaleg tan sukat to ya 43.07 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4423.	
 					
-
 ==Saray barangay==
 * Adiangao
 * Bagacay
@@ -45,10 +45,14 @@ Say '''San Jose''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pi
 * Telegrafo
 * Tominawog
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}										
+{{Camarines Sur}}	
+									
 [[Category:Saray baley na Camarines Sur]]
