--- a/Sipocot.mw
+++ b/Sipocot.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur sipocot.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sipocot, Camarines Sur
 | 1990 = 49501		
@@ -13,7 +14,6 @@
 |}}
 Say '''Sipocot''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 64,855 totoo. Walay kabaleg tan sukat to ya 243.43 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4408.	
 			
-
 ==Saray barangay==
 * Aldezar
 * Alteza
@@ -62,10 +62,14 @@ Say '''Sipocot''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pilip
 * Vigaan
 * Yabo
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}												
+{{Camarines Sur}}	
+											
 [[Category:Saray baley na Camarines Sur]]
