--- a/Siruma.mw
+++ b/Siruma.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur siruma.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Siruma, Camarines Sur
 | 1990 = 13103		
@@ -13,7 +14,6 @@
 |}}
 Say '''Siruma''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 17,764 totoo. Walay kabaleg tan sukat to ya 141.27 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4427.	
 		
-
 ==Saray barangay==
 * Bagong Sirang
 * Bahao
@@ -38,10 +38,14 @@ Say '''Siruma''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pili
 * Tongo-Bantigue
 * Vito
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
