--- a/Tigaon.mw
+++ b/Tigaon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur tigaon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tigaon, Camarines Sur
 | 1990 = 33650		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Tigaon''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 55,272 totoo. Walay kabaleg tan sukat to ya 72.35 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4420.	
-
 
 ==Saray barangay==
 * Abo
@@ -39,10 +39,14 @@ Say '''Tigaon''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pili
 * Tinawagan
 * Vinagre
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
