--- a/Tinambac.mw
+++ b/Tinambac.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur tinambac.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tinambac, Camarines Sur
 | 1990 = 46570		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tinambac''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 67,572 totoo. Walay kabaleg tan sukat to ya 351.62 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 4426.	
 	
-
 ==Saray barangay==
 * Agay-Ayan
 * Antipolo
@@ -60,10 +60,14 @@ Say '''Tinambac''' et unaan ya klase baley ed luyag na [[Camarines Sur]], [[Pili
 * Union
 * Salvacion Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}														
+{{Camarines Sur}}	
+													
 [[Category:Saray baley na Camarines Sur]]
