--- a/Iriga.mw
+++ b/Iriga.mw
@@ -1,7 +1,10 @@
-[[File:Ph_locator_camarines_sur_iriga.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Iriga''' et kumatlo ya klase siyudad ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 111,757 totoo. <br> 	
-Walay kabaleg tan sukat to ya 137.35 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 4431. 			
+Walay kabaleg tan sukat to ya 137.35 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 4431. 	
+
+== Saray reperensiya ==
+{{Reflist}}		
 
 {{Camarines ed Abalaten}}
 									
