--- a/Naga,_Camarines_Sur.mw
+++ b/Naga,_Camarines_Sur.mw
@@ -1,8 +1,10 @@
-[[File:Ph_locator_camarines_sur_naga.png|right|270px]] 							
-									
+{{Infobox location}}
+													
 Say '''Naga, Camarines Sur''' et unaan ya klase siyudad ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 174,931 totoo. <br> 	
-Walay kabaleg tan sukat to ya 84.48 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4400. 			
+Walay kabaleg tan sukat to ya 84.48 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4400. 	
 
+== Saray reperensiya ==
+{{Reflist}}		
 
 {{Template:Camarines ed Abalaten}}
 
