--- a/Catarman,_Camiguin.mw
+++ b/Catarman,_Camiguin.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camiguin catarman.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Catarman, Camiguin
 | 1990 = 13892		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}															
 Say '''Catarman''' et kumalima ya klase baley ed luyag na [[Camiguin]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 16,388 totoo. Walay kabaleg tan sukat to ya 53.75 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9104.	
-
 
 ==Saray barangay==
 * Alga
@@ -30,12 +30,14 @@ Say '''Catarman''' et kumalima ya klase baley ed luyag na [[Camiguin]], [[Pilipi
 * Santo Niño
 * Tangaro
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Camiguin}}
-
-															
+														
 [[Category:Saray baley na Camiguin]]
