--- a/Guinsiliban.mw
+++ b/Guinsiliban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camiguin guinsiliban.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Guinsiliban, Camiguin
 | 1990 = 4341		
@@ -13,7 +14,6 @@
 |}}
 Say '''Guinsiliban''' et kumanem ya klase baley ed luyag na [[Camiguin]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 5,580 totoo. Walay kabaleg tan sukat to ya 18.52 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9102.	
 
-
 ==Saray barangay==
 
 * Butay
@@ -24,10 +24,14 @@ Say '''Guinsiliban''' et kumanem ya klase baley ed luyag na [[Camiguin]], [[Pili
 * North Poblacion
 * South Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camiguin}}															
+{{Camiguin}}		
+													
 [[Category:Saray baley na Camiguin]]
