--- a/Mahinog.mw
+++ b/Mahinog.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camiguin mahinog.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mahinog, Camiguin
 | 1990 = 11313		
@@ -13,7 +14,6 @@
 |}}
 Say '''Mahinog''' et kumalima ya klase baley ed luyag na [[Camiguin]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 13,531 totoo. Walay kabaleg tan sukat to ya 32.55 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9101.	
 	
-
 ==Saray barangay==
 * Benoni
 * Binaliwan
@@ -30,10 +30,14 @@ Say '''Mahinog''' et kumalima ya klase baley ed luyag na [[Camiguin]], [[Pilipin
 * Tubod
 * Tupsan Pequeño
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camiguin}}														
+{{Camiguin}}	
+													
 [[Category:Saray baley na Camiguin]]
