--- a/Mambajao.mw
+++ b/Mambajao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camiguin mambajao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mambajao, Camiguin
 | 1990 = 25207		
@@ -13,7 +14,6 @@
 |}}
 Say '''Mambajao''' et kumatlo ya klase baley ed luyag na [[Camiguin]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 36,435 totoo. Walay kabaleg tan sukat to ya 89 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9100.	
 	
-
 ==Saray barangay==
 * Agoho
 * Anito
@@ -32,10 +32,14 @@ Say '''Mambajao''' et kumatlo ya klase baley ed luyag na [[Camiguin]], [[Pilipin
 * Yumbing
 * Umycco
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camiguin}}														
+{{Camiguin}}	
+													
 [[Category:Saray baley na Camiguin]]
