--- a/Sagay,_Camiguin.mw
+++ b/Sagay,_Camiguin.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camiguin sagay.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sagay, Camiguin
 | 1990 = 9494		
@@ -13,7 +14,6 @@
 |}}
 Say '''Sagay''' et kumalima ya klase baley ed luyag na [[Camiguin]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 11,873 totoo. Walay kabaleg tan sukat to ya 44.13 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9103.	
 	
-
 ==Saray barangay==
 * Alangilan
 * Bacnit
@@ -25,10 +25,14 @@ Say '''Sagay''' et kumalima ya klase baley ed luyag na [[Camiguin]], [[Pilipinas
 * Mayana
 * Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camiguin}}														
+{{Camiguin}}	
+													
 [[Category:Saray baley na Camiguin]]
