--- a/Cuartero.mw
+++ b/Cuartero.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz cuartero.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cuartero, Capiz
 | 1990 = 22597		
@@ -13,7 +14,6 @@
 |}}
 Say '''Cuartero''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,456 totoo. Walay kabaleg tan sukat to ya 106.58 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5811.	
 	
-
 ==Saray barangay==
 * Agcabugao
 * Agdahon
@@ -38,10 +38,14 @@ Say '''Cuartero''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]
 * Sinabsaban
 * Mahabang Sapa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}														
+{{Capiz}}		
+												
 [[Category:Saray baley na Capiz]]
