--- a/Dao.mw
+++ b/Dao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz dao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dao, Capiz
 | 1990 = 29156		
@@ -13,7 +14,6 @@
 |}}
 Say '''Dao''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 31,911 totoo. Walay kabaleg tan sukat to ya 88.64 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5810.	
 	
-
 ==Saray barangay==
 * Aganan
 * Agtambi
@@ -36,10 +36,14 @@ Say '''Dao''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Un
 * Quinayuya
 * San Agustin (Ilas Norte)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}														
+{{Capiz}}	
+													
 [[Category:Saray baley na Capiz]]
