--- a/Dumalag.mw
+++ b/Dumalag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz dumalag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dumalag, Capiz
 | 1990 = 25484		
@@ -13,7 +14,6 @@
 |}}
 Say '''Dumalag''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 29,298 totoo. Walay kabaleg tan sukat to ya 109.18 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5813.	
 		
-
 ==Saray barangay==
 * Concepcion
 * Consolacion
@@ -35,10 +35,14 @@ Say '''Dumalag''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]
 * Santo Rosario
 * Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}													
+{{Capiz}}	
+												
 [[Category:Saray baley na Capiz]]
