--- a/Dumarao.mw
+++ b/Dumarao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz dumarao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dumarao, Capiz
 | 1990 = 36801		
@@ -13,7 +14,6 @@
 |}}
 Say '''Dumarao''' et kumadwa ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 43,986 totoo. Walay kabaleg tan sukat to ya 232.56 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5812.	
 		
-
 ==Saray barangay==
 * Agbatuan 
 * Aglalana 
@@ -50,10 +50,14 @@ Say '''Dumarao''' et kumadwa ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]
 * Tinaytayan
 * Traciano / Agsalay
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}													
+{{Capiz}}	
+												
 [[Category:Saray baley na Capiz]]
