--- a/Ivisan.mw
+++ b/Ivisan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz ivisan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ivisan, Capiz
 | 1990 = 21510		
@@ -13,7 +14,6 @@
 |}}
 Say '''Ivisan''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 26,763 totoo. Walay kabaleg tan sukat to ya 54.2 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5805.	
 		
-
 ==Saray barangay==
 * Agmalobo
 * Agustin Navarra (Agumang - ang)
@@ -31,10 +31,14 @@ Say '''Ivisan''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]].
 * Poblacion Sur
 * Santa Cruz
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}													
+{{Capiz}}	
+												
 [[Category:Saray baley na Capiz]]
