--- a/Jamindan.mw
+++ b/Jamindan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz jamindan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jamindan, Capiz
 | 1990 = 27896		
@@ -13,7 +14,6 @@
 |}}
 Say '''Jamindan''' et kumadwa ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 35,002 totoo. Walay kabaleg tan sukat to ya 412.03 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5808.	
 	
-
 ==Saray barangay==
 * Agambulong
 * Agbun-od
@@ -46,10 +46,14 @@ Say '''Jamindan''' et kumadwa ya klase baley ed luyag na [[Capiz]], [[Pilipinas]
 * San Vicente
 * Santo Rosario
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}														
+{{Capiz}}	
+													
 [[Category:Saray baley na Capiz]]
