--- a/Ma-ayon.mw
+++ b/Ma-ayon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz ma-ayon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ma-ayon, Capiz
 | 1990 = 29808		
@@ -13,7 +14,6 @@
 |}}
 Say '''Ma-ayon''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 36,430 totoo. Walay kabaleg tan sukat to ya 142.32 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 5809.	
 	
-
 ==Saray barangay==
 * Aglimocon
 * Alasaging
@@ -48,10 +48,14 @@ Say '''Ma-ayon''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]
 * Tuburan
 * West Villaflores
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}													
+{{Capiz}}	
+												
 [[Category:Saray baley na Capiz]]
