--- a/Mambusao.mw
+++ b/Mambusao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz mambusao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mambusao, Capiz
 | 1990 = 33213		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Mambusao''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 37,672 totoo. Walay kabaleg tan sukat to ya 136.91 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5807.	
-	
 
 ==Saray barangay==
 * Atiplo
@@ -42,10 +42,14 @@ Say '''Mambusao''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]
 * Tugas
 * Tumalalud
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}														
+{{Capiz}}	
+													
 [[Category:Saray baley na Capiz]]
