--- a/Panay,_Capiz.mw
+++ b/Panay,_Capiz.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz panay.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Panay, Capiz
 | 1990 = 36817		
@@ -13,7 +14,6 @@
 |}}
 Say '''Panay''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 43,449 totoo. Walay kabaleg tan sukat to ya 116.37 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 5801.	
 			
-
 ==Saray barangay==
 * Agbalo
 * Agbanban
@@ -58,10 +58,14 @@ Say '''Panay''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. 
 * Tanza Sur
 * Tico
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}												
+{{Capiz}}	
+											
 [[Category:Saray baley na Capiz]]
