--- a/Panitan.mw
+++ b/Panitan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz panitan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Panitan, Capiz
 | 1990 = 32867		
@@ -13,7 +14,6 @@
 |}}
 Say '''Panitan''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 37,895 totoo. Walay kabaleg tan sukat to ya 89.88 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 5815.	
 		
-
 ==Saray barangay==
 * Agbabadiang
 * Agkilo
@@ -42,10 +42,14 @@ Say '''Panitan''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]
 * Tincupon
 * Tinigban
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}													
+{{Capiz}}	
+												
 [[Category:Saray baley na Capiz]]
