--- a/Pilar,_Capiz.mw
+++ b/Pilar,_Capiz.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz pilar.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pilar, Capiz
 | 1990 = 35929		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pilar''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 41,572 totoo. Walay kabaleg tan sukat to ya 77.99 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 5804.	
 	
-
 ==Saray barangay==
 * Balogo
 * Binaobawan
@@ -45,5 +45,6 @@ Say '''Pilar''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. 
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}														
+{{Capiz}}	
+													
 [[Category:Saray baley na Capiz]]
