--- a/Pilar,_Capiz.mw
+++ b/Pilar,_Capiz.mw
@@ -40,6 +40,9 @@ Say '''Pilar''' et kumatlo ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. 
 * Tabun-acan
 * Yating
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
