--- a/President_Roxas,_Capiz.mw
+++ b/President_Roxas,_Capiz.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz president roxas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> President Roxas, Capiz
 | 1990 = 24052		
@@ -13,7 +14,6 @@
 |}}
 Say '''President Roxas''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 28,561 totoo. Walay kabaleg tan sukat to ya 77.88 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 5803.	
 		
-
 ==Saray barangay==
 * Aranguel
 * Badiangon
@@ -38,10 +38,14 @@ Say '''President Roxas''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pil
 * Santo Niño
 * Vizcaya
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}													
+{{Capiz}}	
+												
 [[Category:Saray baley na Capiz]]
