--- a/Sigma.mw
+++ b/Sigma.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator capiz sigma.png|right|270px]]	
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sigma, Capiz
@@ -14,7 +14,6 @@
 |}}
 Say '''Sigma''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 29,138 totoo. Walay kabaleg tan sukat to ya 101.71 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5816.	
 	
-
 ==Saray barangay==
 * Acbo
 * Amaga
@@ -38,10 +37,14 @@ Say '''Sigma''' et kumapat ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. 
 * Poblacion Sur
 * Tawog
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}														
+{{Capiz}}	
+													
 [[Category:Saray baley na Capiz]]
