--- a/Tapaz.mw
+++ b/Tapaz.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator capiz tapaz.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tapaz, Capiz
 | 1990 = 40942		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tapaz''' et unaan ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 48,051 totoo. Walay kabaleg tan sukat to ya 517.18 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5814.	
 			
-
 ==Saray barangay==
 * Abangay
 * Acuña
@@ -74,10 +74,14 @@ Say '''Tapaz''' et unaan ya klase baley ed luyag na [[Capiz]], [[Pilipinas]]. Un
 * Taslan
 * Wright
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Capiz}}												
+{{Capiz}}	
+											
 [[Category:Saray baley na Capiz]]
