--- a/Roxas,_Capiz.mw
+++ b/Roxas,_Capiz.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_capiz_roxas.png|right|270px]] 							
-									
+{{Infobox location}}
+														
 Say '''Roxas, Capiz''' et kumadwa ya klase siyudad ed luyag na [[Capiz]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 156,197 totoo. <br> 	
-Walay kabaleg tan sukat to ya 95.07 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 5,800. 			
+Walay kabaleg tan sukat to ya 95.07 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 5,800.
+
+== Saray reperensiya ==
+{{Reflist}} 	
+
+{{Capiz}}		
 									
 [[Category:Saray siyudad na Filipinas]]
