--- a/Template:Camarines_Norte.mw
+++ b/Template:Camarines_Norte.mw
@@ -11,7 +11,7 @@
 * [[Jose Panganiban, Camarines Norte|Jose Panganiban]]
 * [[Labo, Camarines Norte|Labo]]
 * [[Mercedes, Camarines Norte|Mercedes]]
-* [[Paracale, Camarines Norte|Paracale]]
+* [[Paracale]]
 * [[San Lorenzo Ruiz, Camarines Norte|San Lorenzo Ruiz]]
 * [[San Vicente, Camarines Norte|San Vicente]]
 * [[Santa Elena, Camarines Norte|Santa Elena]]
