--- a/Bagamanoc.mw
+++ b/Bagamanoc.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes bagamanoc.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bagamanoc, Catanduanes
 | 1990 = 10179		
@@ -13,7 +14,6 @@
 |}}
 
 Say '''Bagamanoc''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 11,551 totoo. Walay kabaleg tan sukat to ya 80.74 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4807.	
-
 
 ==Saray barangay==
 * Antipolo
@@ -35,10 +35,14 @@ Say '''Bagamanoc''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pi
 * Santa Teresa
 * Suchan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}															
+{{Catanduanes}}	
+														
 [[Category:Saray baley na Catanduanes]]
