--- a/Baras,_Catanduanes.mw
+++ b/Baras,_Catanduanes.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes baras.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baras, Catanduanes
 | 1990 = 9769		
@@ -13,7 +14,6 @@
 |}}
 Say '''Baras''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 12,848 totoo. Walay kabaleg tan sukat to ya 109.5 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4803.	
 	
-
 ==Saray barangay==
 * Abihao
 * Agban
@@ -45,10 +45,14 @@ Say '''Baras''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipi
 * Tilod
 * Western Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}														
+{{Catanduanes}}		
+												
 [[Category:Saray baley na Catanduanes]]
