--- a/Bato,_Catanduanes.mw
+++ b/Bato,_Catanduanes.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes bato.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bato, Catanduanes
 | 1990 = 15331		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bato''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 21,279 totoo. Walay kabaleg tan sukat to ya 48.62 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4801.	
 	
-
 ==Saray barangay==
 * Aroyao Pequeño
 * Bagumbayan
@@ -43,10 +43,14 @@ Say '''Bato''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipin
 * Tilis
 * Ilawod (Poblacion) 1
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}														
+{{Catanduanes}}		
+												
 [[Category:Saray baley na Catanduanes]]
