--- a/Gigmoto.mw
+++ b/Gigmoto.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes gigmoto.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gigmoto, Catanduanes
 | 1990 = 6487		
@@ -13,7 +14,6 @@
 |}}
 Say '''Gigmoto''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 8,368 totoo. Walay kabaleg tan sukat to ya 181.82 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4804.	
 		
-
 ==Saray barangay==
 * Biong
 * Dororian
@@ -30,5 +30,6 @@ Say '''Gigmoto''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pili
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}													
+{{Catanduanes}}		
+											
 [[Category:Saray baley na Catanduanes]]
