--- a/Gigmoto.mw
+++ b/Gigmoto.mw
@@ -25,6 +25,9 @@ Say '''Gigmoto''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pili
 * Sicmil
 * Sioron
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
