--- a/San_Andres,_Catanduanes.mw
+++ b/San_Andres,_Catanduanes.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes san andres.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Andres, Catanduanes
 | 1990 = 26727		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Andres''' et kumatlo ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 36,779 totoo. Walay kabaleg tan sukat to ya 167.31 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4810.	
 		
-
 ==Saray barangay==
 * Agojo
 * Alibuag
@@ -54,10 +54,14 @@ Say '''San Andres''' et kumatlo ya klase baley ed luyag na [[Catanduanes]], [[Pi
 * Wagdas (Poblacion)
 * Yocti
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}													
+{{Catanduanes}}	
+												
 [[Category:Saray baley na Catanduanes]]
