--- a/General_Emilio_Aguinaldo,_Cavite.mw
+++ b/General_Emilio_Aguinaldo,_Cavite.mw
@@ -1,4 +1,4 @@
-[[Image:Ph_locator_cavite_general emilio aguinaldo.png|right|thumb|250px|Mapa na [[Cavite]] ed nagnengneng a dako ed Bailen]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Emilio Aguinaldo, Cavite
@@ -17,7 +17,7 @@ An '''Heneral Emilio Aguinaldo''' (o '''Bailen'''; [[Salitan English|English]]: 
 
 ==Saray baranggay==
 
-An Bailen saray 14 ed [[baranggay]] kila dia!
+An Bailen saray 14 ed [[baranggay]].
 
 * A. Dalusag
 * Batas Dao
@@ -33,6 +33,9 @@ An Bailen saray 14 ed [[baranggay]] kila dia!
 * Poblacion II
 * Poblacion III
 * Poblacion IV
+
+== Saray reperensiya ==
+{{Reflist}}
 
 
 {{cavite}}
