--- a/Kawit.mw
+++ b/Kawit.mw
@@ -1,6 +1,4 @@
-{{translation}}
-
-[[Image:Ph locator cavite kawit.png|thumb|Kawit o Cavité El Viejo]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kawit, Cavite
@@ -15,7 +13,7 @@
 | 2030 = 		
 |}}
 
-An '''Ili iti Kawit''' (sigor ed ''Cavité el Viejo'') sakey arapan ya una a klase na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
+An '''Kawit''' (sigor ed ''Cavité el Viejo'') sakey arapan ya una a klase na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
 
 Dia ed baley na naianak ni [[Emilio Aquinaldo]], irapan na ed pangulo na [[Filipinas]]. Dia met naipatakder so [[Aquinaldo Shrine]].
 
@@ -51,8 +49,10 @@ Say Kawit sakey nagudwa ed 23 na [[baranggay]].
 * Wakas II
 </td></tr></table>
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Cavite]]
