--- a/Magallanes,_Cavite.mw
+++ b/Magallanes,_Cavite.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Magallanes<br>''Kasilag'' |
- sealfile     = |
- locatormapfile = Ph_locator_cavite magallanes.png |
- caption      = Map of [[Cavite]] showing the location of Kasilag. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Cavite]] |
- districts    = 7th district of Cavite |
- barangays    = 16 |
- class        = ikalima ya klase |
- mayor        = [[Edwin V. Sisante]] |
- founded      = [[June 25]], [[1916]] |
- cityhood     = - | 
- areakm2      =  |
- pop2000      = 22,231 |
- popden2000   =  |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magallanes, Cavite
 | 1990 = 12556		
@@ -30,9 +12,9 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Kasilag''' sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Cavite]].
+Say '''Magallanes''' sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Cavite]].
 
-== Listaan na Barangay ==
+== Listaan na barangay ==
  
 Say Magallanes walay 16 ya [[barangay]]:
 {| border="0"
@@ -57,8 +39,10 @@ Say Magallanes walay 16 ya [[barangay]]:
 * San Agustin
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Cavite]]
