--- a/Maragondon.mw
+++ b/Maragondon.mw
@@ -1,22 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Marágondon |
- sealfile     =|
- locatormapfile = Ph_locator_cavite_maragondon.png |
- caption      = Map of [[Cavite]] showing the location of Maragondon. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Cavite]] |
- districts    = 7th District of Cavite |
- barangays    = 27 |
- class        = 3rd class |
- mayor        = [[Mon Anthony Andaman]] |
- founded      = [[1727]]|
- areakm2      =  |
- pop2000      =  |
- popden2000   =  |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maragondon, Cavite
 | 1990 = 22814		
@@ -67,6 +50,8 @@ Say Maragondon walay 27 ya [[barangay]]:
 * Tulay Kanluran
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Cavite}}
 
