--- a/Mendez.mw
+++ b/Mendez.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Méndez-Núñez|
- sealfile     = |
- locatormapfile = Ph_locator_cavite_mendez.png |
- caption      = Map of [[Cavite]] showing the location of Méndez-Núñez. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Cavite]] |
- districts    = 6th district |
- barangays    = 25 |
- class        = 4th class |
- mayor        = Atty. Fredderick Aure Vida |
- founded      = Septiyembre 6, 1875
- cityhood     = - |
- areakm2      = 43.2700 |
- pop2000      = 28,570 |
- popden2000   = 660.30|
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mendez, Cavite
 | 1990 = 17652		
@@ -30,10 +12,9 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Méndez''' (e.g. '''Méndez-Núñez'''; [[salitan Ruso|Mendezeño]]: Мендезичска Мунисипалида), sakey baley diad [[Filipinas|Pilipino]] ed [[Cavite]].
+Say '''Méndez''' sakey baley diad [[Filipinas|Pilipino]] ed [[Cavite]].
 
 == Listaan na barangay ==
-
 
 Saray [[barangay]] no twenty five:
 
@@ -68,7 +49,10 @@ Saray [[barangay]] no twenty five:
 </td></tr></table>
 
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{Cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Cavite]]
