--- a/Template:Cavite.mw
+++ b/Template:Cavite.mw
@@ -15,7 +15,7 @@
 * [[Magallanes, Cavite|Magallanes]]
 * [[Maragondon, Cavite|Maragondon]]
 * [[Mendez, Cavite|Mendez]]
-* [[Naic, Cavite||Naic]]
+* [[Naic, Cavite|Naic]]
 * [[Noveleta]]
 * [[Rosario, Cavite|Rosario]]
 * [[Silang, Cavite|Silang]]
