--- a/Naic.mw
+++ b/Naic.mw
@@ -1,21 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Naic |
- locatormapfile = Ph_locator_cavite_naic.png |
- caption      = Map of [[Cavite]] showing the location of Naic. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Cavite]] |
- districts    = 7th District of Cavite |
- barangays    = 31 |
- class        = 1st class; partially urban |
- mayor        = Margarita Nazareno |
- founded      = [[1903]]|
- areakm2      =  |
- pop2000      =  |
- popden2000   =  |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Naic, Cavite
 | 1990 = 51629		
@@ -28,9 +12,9 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Baley na Naic''' sakey 1st class ya [[baley]] ed [[luyag na Filipinas|luyag]] na [[Cavite]], [[Filipinas]].  Onong ed [[2000]] census, walay population to ya 72,683 ya too diad 15,230 ya pamilya.
+Say '''Baley na Naic''' sakey 1st class ya [[baley]] ed [[luyag na Filipinas|luyag]] na [[Cavite]], [[Filipinas]].  Onong ed [[2000]] census, walay populasyon to ya 72,683 ya too diad 15,230 ya pamilya.
 
-== Listaan na Barangay ==
+== Listaan na barangay ==
 
 Say Naic walay 31 ya [[barangay]]:
 
@@ -71,11 +55,13 @@ Say Naic walay 31 ya [[barangay]]:
 * Timalan Concepxion
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Cavite}}
-
 {{stub}}
 
 [[Category:Saray baley na Cavite]]
