--- a/Noveleta.mw
+++ b/Noveleta.mw
@@ -1,20 +1,4 @@
-{{Infobox Philippine city |
- infoboxtitle = Bayan ng Noveleta |
- sealfile     = |
- locatormapfile = Ph_locator_cavite_noveleta.png |
- caption      = Map of [[Cavite]] showing the location of Noveleta. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Cavite]] |
- districts    = 1st district of Cavite |
- barangays    = 16 |
- class        = none |
- mayor        = [[Dino Reyes Chua]] |
- cityhood     = - |
- areakm2      =  |
- pop2000      =  |
- popden2000   = |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Noveleta, Cavite
@@ -51,6 +35,9 @@ Say Noveleta walay 16 ya barangay na may barangay kapitan:
 * San Rafael III: Jessie Dela Paz
 * San Rafael IV: Renielito Castro 
 * Santa Rosa II: Wilfredo Aquino
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Cavite}}
 
