--- a/Rosario,_Cavite.mw
+++ b/Rosario,_Cavite.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_cavite_rosario.png|right|thumb|250px|Mapa na [[Cavite]] ed nagnengneng a dako ed Rosario]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rosario, Cavite
 | 1990 = 45405		
@@ -12,11 +13,11 @@
 | 2030 = 		
 |}}
 
-An '''Rosario''' (o '''Salinas''') sakey mataas ed urbanisado na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]]
+An '''Rosario''' (o '''Salinas''') sakey mataas ed urbanisado na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
 
 ==Saray baranggay==
 
-Politikal kila dya so numero 20!
+Politikal kila dya so numero 20.
 
 <table border=0><tr>
 <td valign=top>
@@ -132,6 +133,10 @@ Politikal kila dya so numero 20!
 ** 1992-1998 - Jose Ricafrente
 ** 1998-2007 - Renato Abutan
 ** 2007 - Presente - Jose Ricafrente
+
+== Saray reperensiya ==
+{{Reflist}}
+
 
 {{cavite}}
 
