--- a/Silang.mw
+++ b/Silang.mw
@@ -1,25 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-:''Nengneng met so: [[Silang (panpalinewan)]]''
-
-{{Infobox Philippine city |
- infoboxtitle = Silang |
- sealfile     =|
- locatormapfile = Ph_locator_cavite silang.png |
- caption      = Map of [[Cavite]] showing the location of Silang. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Cavite]] |
- districts    = 5th district of Cavite |
- barangays    = 64 |
- class        = primere class |
- mayor        = [[Clarito A. Poblete]] |
- founded      = [[1917]] |
- cityhood     = - |
- areakm2      = 209.43 |
- pop2000      = 213,490 |
- popden2000   = 1000 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Silang, Cavite
 | 1990 = 93790		
@@ -34,7 +14,7 @@
 |}}
 Say '''Silang''' sakey primere a clase [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
 
-== Listaan na Barangay ==
+== Listaan na barangay ==
  
 Say Silang walay 64 ya [[barangay]]:
 <table border=0><tr>
@@ -107,8 +87,10 @@ Say Silang walay 64 ya [[barangay]]:
 * Tubuan III
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Cavite]]
