--- a/Tanza.mw
+++ b/Tanza.mw
@@ -1,6 +1,7 @@
-{{translation}}
+{{Infobox location
+|image_skyline = Tanza Cavite.JPG
+}}
 
-[[Image:Ph locator cavite tanza.png|thumb|Tanza, Cavite]]
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tanza, Cavite
 | 1990 = 61785		
@@ -13,9 +14,8 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-[[File:Tanza Cavite.JPG|right|200px]]
 
-An '''Tanza''' (o Santa Kruz De Malabón) sakey arapan ya una a klase na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
+Say '''Tanza''' (o Santa Kruz De Malabón) sakey arapan ya una a klase na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
 
 
 ==Politika==
@@ -74,33 +74,6 @@ Say saray 41 ed [[baranggay]] kila dia! <!--, ed ragay na 1 na komunidad ed Java
 * Punta II
 </td></tr></table>
 
-==Saray lokasiyon==
-===Tinda===
-* Anna Store
-* Ate Mrs. Store
-* Basil's Store
-* Corsame Store
-* Cynthia Store
-* Janine's Sari-Sari Store
-* Jhanne Cedrick Gift Shop & Store
-* Raiki Store
-
-===Eskuela===
-* [[Good Tree International School]] [[2000]]
-* [[Holy Nazarene Christian Academy]] [[1997]]
-* [[Maddalena Starace School]]
-* SIMS
-
-===Resort===
-* Hardin ng Postema
-* Tanza's Oasis Resort & Hotel
-* Villa Excellance
-
-===Kainan===
-* [[Chowking]]
-* [[Jollibee]]
-* [[McDonald's]]
-
 ==Lokasiyon ed Hiyograpiko==
 
 {{Geographic location
@@ -116,8 +89,10 @@ Say saray 41 ed [[baranggay]] kila dia! <!--, ed ragay na 1 na komunidad ed Java
 |image=
 }}
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Cavite]]
