--- a/Ternate.mw
+++ b/Ternate.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Baley na Ternate<br>''Município de Bahra'' |
- sealfile     = Ternate, Cavite seal.png|
- locatormapfile = Ph_locator_cavite_ternate.png |
- caption      = Map of [[Cavite]] showing the location of Ternate. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Cavite]] |
- districts    = 7th district of Cavite |
- barangays    = 10 |
- class        = 4th class |
- mayor        = [[Lamberto Bambao]] |
- founded      = [[1663]]<br>[[1914]] |
- cityhood     = |
- areakm2      = 54.7 |
- pop2000      = 19,297 |
- popden2000   = |
- coordinates  = 14°24′N 120°50′E |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ternate, Cavite
@@ -34,11 +15,9 @@
 
 An '''Ternate''', o '''al-Ternate''' sakey arapan ya apat na klase na [[baley]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
 
-
 ==Saray baranggay==
-[[image:Amphibious_assault_21Jan2000.jpg|right|thumb|250px|Ternate, Philippines ([[June 21]], [[2000]]) -- Philippine Marines storm White Beach in Ternate, Philippines during joint U.S. and Philippine amphibious training exercises during Cooperation Afloat Readiness and Training (CARAT) 2000. CARAT is an annual series of bilateral exercises between the U.S. Navy and the Southeast Asian navies designed to promote interoperability between nations.]]
-Say Ternate saray 10 ed [[baranggay]] kila dia!
 
+Say Ternate saray 10 ed [[baranggay]].
 
 * Poblacion I (Barangay I)
 * Poblacion II (Barangay II)
@@ -51,23 +30,10 @@ Say Ternate saray 10 ed [[baranggay]] kila dia!
 * San Juan II
 * Sapang II
 
-
-==Saray lokasiyon==
-===Tinda===
-* Calumba's Eatery
-
-===Resort===
-* Caylabne Beach Resort
-* Puerto Azul
-* Ternate Beach Resort
-
-===Kainan===
-
-==Saray nipaway ya gawing==
+== Saray reperensiya ==
+{{Reflist}}
 
 {{commons|Category:Ternate, Cavite}}
-
-==Lokasiyon ed Hiyograpiko==
 
 {{Geographic location
 |North=[[Look Manila]]
@@ -82,8 +48,7 @@ Say Ternate saray 10 ed [[baranggay]] kila dia!
 |image=
 }}
 
-{{philippines-geo-stub}}
-
 {{Cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Cavite]]
